--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "librarian_wizard",
+  "name": "y",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,5 +35,17 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MarijaPaunovic/librarian_wizard.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MarijaPaunovic/librarian_wizard/issues"
+  },
+  "homepage": "https://github.com/MarijaPaunovic/librarian_wizard#readme"
 }
