--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "y",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://marijapaunovic-library-wizard.netlify.com",
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.2.1",
