--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "y",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://marijapaunovic-library-wizard.netlify.com",
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.2.1",
@@ -48,5 +47,5 @@
   "bugs": {
     "url": "https://github.com/MarijaPaunovic/librarian_wizard/issues"
   },
-  "homepage": "https://github.com/MarijaPaunovic/librarian_wizard#readme"
+  "homepage": "https://marijapaunovic-library-wizard.netlify.com/"
 }
